--- a/dztest/package.json
+++ b/dztest/package.json
@@ -1,16 +1,13 @@
 {
-    "name": "dztest",
-    "version": "1.0.0",
-    "description": "",
-    "main": "app.js",
-    "scripts": {
-        "wxci": "cross-env node ci.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "cross-env": "^7.0.3",
-        "miniprogram-ci": "^1.2.3"
-    }
+  "name": "dztest",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "wxci": "cross-env node ci.js"
+  },
+  "dependencies": {
+    "cross-env": "^7.0.3",
+    "miniprogram-ci": "^1.2.3"
+  }
 }
